# spatial-factorization-py

./: .gitignore  README.md  pyproject.toml  setup.cfg
spatial_factorization/: __about__.py  __init__.py  sf.py  sfh.py
spatial_factorization/utils/: nnfu.py  postprocess.py  training.py  visualize.py
src/spatial_factorization/: cf.py  example.py  misc.py  nnfu.py  training.py
