[build-system]
requires = [
    "anndata>=0.7",
    "dill>=0.3",
    "numpy>=1.19",
    "pandas>=1.2",
    "scipy>=1.7",
    "scikit-learn>=0.24",
    "setuptools>=42",
    "squidpy>=1.1",
    "tensorflow>=2.5",
    "tensorflow_probability>=0.13",
    "wheel"
]
build-backend = "setuptools.build_meta"
