[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial_factorization"
dynamic = ["version"]

authors = [
  { name="Will Townes", email="will.townes@gmail.com" },
]

dependencies = [
    "anndata>=0.7",
    "dill>=0.3",
    "numpy>=1.19",
    "pandas>=1.2",
    "scipy>=1.7",
    "scikit-learn>=0.24",
    "setuptools>=42",
    "squidpy>=1.1",
    "tensorflow>=2.5",
    "tensorflow_probability>=0.13",
    "wheel"
]

description = "Spatially-aware probabilistic factor models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Homepage" = "https://github.com/willtownes/spatial-factorization-py"
"Bug Tracker" = "https://github.com/willtownes/spatial-factorization-py/issues"

[tool]

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/*.py",
  "src/utils/*.py",
]

[tool.hatch.build.targets.wheel]
include = [
  "src/*.py",
  "src/utils/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
