[metadata]
name = spatial-factorization
version = 0.0.1
author = Will Townes
author_email = will.townes@gmail.com
description = Spatially-aware probabilistic factor models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/willtownes/spatial-factorization-py
project_urls =
    Bug Tracker = https://github.com/willtownes/spatial-factorization-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src